examples/stress-test/errors/bad-circular-a.mds
@import "./bad-circular-b.mds" as b

Hello from A!
